Move 'server.py' to 'api/' and implement metrics.read_receivers()
