# backend/api/swagger.yml
@@ -12,7 +12,7 @@ basePath: "/api"
 paths:
   /metrics:
     get:
-      operationId: api.metrics.read_all
+      operationId: metrics.read_all
       summary: List all metrics
       description: List all metrics
       tags:
@@ -43,7 +43,7 @@ paths:
             $ref: "#/definitions/Error"
 
     post:
-      operationId: api.metrics.create
+      operationId: metrics.create
       summary: Create new metric in system.
       description: Create new metric in system.
       tags:
@@ -77,7 +77,7 @@ paths:
 
   /metrics/{metricId}:
     get:
-      operationId: api.metrics.read_one
+      operationId: metrics.read_one
       description: Get concrete metric by id
       tags:
         - Metric
@@ -107,7 +107,7 @@ paths:
             $ref: '#/definitions/Error'
 
     patch:
-      operationId: api.metrics.patch
+      operationId: metrics.patch
       description: Edit data for concrete metric
       tags:
         - Metric
@@ -139,7 +139,7 @@ paths:
             $ref: '#/definitions/Error'
 
     delete:
-      operationId: api.metrics.delete
+      operationId: metrics.delete
       description: Delete concrete metric using metricId
       tags:
         - Metric
@@ -159,6 +159,73 @@ paths:
               message: 
                 type: string
                 example: 'OK'
+        '400':
+          description: Bad request. If some data are strange
+          schema:
+            $ref: '#/definitions/Error'
+        '500':
+          description: Unexpected error.
+          schema:
+            $ref: '#/definitions/Error'
+ 
+  
+  /metrics/{metricId}/receivers:
+    get:
+      operationId: metrics.read_receivers
+      description: List of receivers of the current metric.
+      tags:
+        - Receiver
+      produces:
+      - application/json
+      parameters:
+      - name: metricId
+        in: path
+        required: true
+        type: integer
+        description: ''
+      responses:
+        '200':
+          description: OK.
+          schema:
+            type: array
+            items:
+              $ref: '#/definitions/ReceiverModel'
+        '400':
+          description: Bad request. If some data are strange
+          schema:
+            $ref: '#/definitions/Error'
+        '500':
+          description: Unexpected error.
+          schema:
+            $ref: '#/definitions/Error'
+
+    post:
+      operationId: metrics.create_receiver
+      description: Add receiver to current metric
+      tags:
+      - Receiver
+      produces:
+      - application/json
+      parameters:
+      - name: metricId
+        in: path
+        required: true
+        type: integer
+      - name: receiver
+        in: body
+        required: true
+        schema:
+          type: array
+          items:
+            type: integer
+          example: [2, 7]
+      responses:
+        '200':
+          description: OK.
+          schema:
+            type: array
+            items:
+              $ref: '#/definitions/MetricExtendedModel'  #TODO
         '400':
           description: Bad request. If some data are strange
           schema:
@@ -221,6 +288,63 @@ definitions:
       reading_time:
         type: "integer"        
 
+  ReceiverModel:
+    type: "object"
+    properties:
+      id:
+        type: "integer"
+        example: 32
+      metricId:
+        type: "integer"
+        example: 2
+      userId:
+        type: "integer"
+        example: 7
+    required:
+      - id
+      - userId
+      - metricId
+
+  MetricExtendedModel:
+    type: "object"
+    properties:
+      id:
+        type: "integer"
+      userId:
+        type: "integer"
+      taskId:
+        type: "integer"
+      taskCopied:
+        type: "boolean"
+      taskViewed:
+        type: "boolean"
+      readingTime:
+        type: "integer"
+      receivers:
+        type: array
+        items:
+          $ref: '#/definitions/ReceiverModel'
+      senders:
+        type: array
+        items:
+          $ref: '#/definitions/SenderModel'
+
+  SenderModel:
+    type: "object"
+    properties:
+      id:
+        type: "integer"
+        example: 2
+      metricId:
+        type: "integer"
+        example: 13
+      userId:
+        type: "integer"
+        example: 9
+    required:
+      - id
+      - userId
+      - metricId
 
   Error:
     title: Error message
